# NativeAndroid

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/res/values/: strings.xml
src/: CMakeLists.txt  main.cpp
